--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name = "author" content="Dayana Alves de Souza">
     <meta name="description" content="Site pessoal desenvolvido para a conclusão do curso de HTML5 e CSS3 - Potência Feminina">
     
+    <link rel="shortcut icon" type= "image/png" href="assets/icons/favicon-github.png">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,54 +18,60 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="header__link" title="Me acompanhe no Instagram">
+        <a href="https://www.instagram.com/dayana_alves_souza/" class="header__link" title="Me acompanhe no Instagram">
             <img class="icon" src="assets/icons/iconmonstr-instagram-redondo-preto.svg" alt="">
         </a>
-        <a href="#" class="header__link" title="Me acompanhe no Facebook">
+        <a href="https://www.facebook.com/dayana.souza1/" class="header__link" title="Me acompanhe no Facebook">
             <img class="icon" src="assets/icons/iconmonstr-facebook-redondo-preto.svg" alt="">
         </a>
-        <a href="#" class="header__link" title="Me acompanhe no GitHub">
-            <img class="icon" src="assets/icons/iconmonstr-github-redondo-preto.svg" alt="">
-        </a>
-        <a href="#" class="header__link" title="Me acompanhe no LinkedIn">
+        <a href="https://www.linkedin.com/in/dayanalvesouza/" class="header__link" title="Me acompanhe no LinkedIn">
             <img class="icon" src="assets/icons/iconmonstr-linkedin-redondo-preto.svg" alt="">
         </a>
     </header>
 
     <main class="main">
-        <div class="perfil">
-            <img class="perfil__foto" src="assets/pictures/Daya-perfil.jpg" alt="Dayana Souza Perfil">
-            <h1 class="perfil__nome">Dayana Souza</h1>
-            <p class="perfil__description">
-                Mussum Ipsum, cacilds vidis litro abertis. A ordem dos tratores não altera o pão duris.Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose.Diuretics paradis num copo é motivis de denguis.Paisis, filhis, espiritis santis.
-
-                Per aumento de cachacis, eu reclamis.Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis.Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus.Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!
-
+        <div class="profile">
+            <img class="profile__picture" src="assets/pictures/Daya-perfil.jpg" alt="Dayana Souza Perfil">
+            <h1 class="profile__name">Dayana Souza</h1>
+            <p class="profile__description">
+                Olá, seja bem vindo(a)!  <br>
+                Sou uma mulher que sempre sonhou alto e correu atrás de realizar esses sonhos, tenho 37 anos, filha de nordestinos que saíram da Bahia em busca de uma qualidade de vida e condições financeiras melhor. <br>
+                Sempre soube que a educação é a melhor forma de se conquistar tudo que deseja. Por isso sempre me dediquei aos estudos, porque sei que apenas através da educação podemos mudar a nossa realidade e a realidade daqueles que nos cercam. <br>
+                Sou mãe de duas crianças lindas, Vinicius de 9 anos e Lorena de 5 aninhos. Atualmente estou migrando de carreira para a área de TI, depois de fazer um hiato para me dedicar a minha família e empreender no ramo do artesanato. Estudo Analise e Desenvolvimento de Sistemas no Centro Universitário Uninter e faço diversos cursos para me aperfeiçoar e estar pronta para o mercado de trabalho. <br>
+                Espero assim me tornar um exemplo para meus filhos, mostrando pra eles que nunca é tarde para recomeçar e aprender algo novo. Que sempre podemos recalcular a rota da nossa vida e poder realizar sonhos, por mais difíceis e distantes que possam ser.
             </p>
         </div>
 
         <section class="section">
-            <h2 class="section__titulo">Meus Cursos</h2>
-            <article class="curso">
-                <h3 class="curso__titulo">Curso 1</h3>
-                <p class="curso__description">
-                    Mussum Ipsum, cacilds vidis litro abertis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi.Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.In elementis mé pra quem é amistosis quis leo.
+            <h2 class="section__title">Meus Cursos</h2>
+            <article class="course">
+                <h3 class="course__title">Analise e Desenvolvimento de Sistemas </h3>
+                <p class="course__description">
+                    Estou cursando o segundo semestre do tecnólogo de Analise e Desenvolvimento de Sistemas na Uninter. Durante esse período já aprendi Lógica de Programação e Algoritmos, Python, Programação Orientada a Objetos em Java, Banco de Dados MySQL, funcionamento de Sistemas de Informação e Introdução a Engenharia de Software.
                 </p>
 
             </article>
 
-            <article class="curso">
-                <h3 class="curso__titulo">Curso 2</h3>
-                <p class="curso__description">
-                    Mussum Ipsum, cacilds vidis litro abertis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi.Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.In elementis mé pra quem é amistosis quis leo.
+            <article class="course">
+                <h3 class="course__title">Programação Web para Iniciantes</h3>
+                <p class="course__description">
+                    Estou cursando no momento pela WoMakersCode o curso de Programação Web para Iniciantes, em parceria com a Potência Tech e o Ifood. Estamos aprendendo HTML5, CSS3, JavaScript e Design Thinking. Inclusive esse projeto que você está vendo no momento é um projeto desenvolvido durante o curso!
                 </p>
 
             </article>
 
-            <article class="curso">
-                <h3 class="curso__titulo">Curso 3</h3>
-                <p class="curso__description">
-                    Mussum Ipsum, cacilds vidis litro abertis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi.Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.In elementis mé pra quem é amistosis quis leo.
+            <article class="course">
+                <h3 class="course__title">Trilha de Java</h3>
+                <p class="course__description">
+                    Estou fazendo a trilha de Java pelo programa Start by Capgemini em parceria com a ProWay. Neste curso já tivemos aulas de introdução a Lógica de Programação, HTML 5, CSS 3, Java e Programação Orientada a Objetos, JavaScript e JQuery. 
+                </p>
+
+            </article>
+
+            <article class="course">
+                <h3 class="course__title">Gestão Financeira</h3>
+                <p class="course__description">
+                    Me formei no ano de 2011 em Gestão Financeira pela Universidade Ibirapuera. Conclui essa formação através de uma bolsa 100% que conquistei através do ProUni. Durante os estudos aprendi sobre estatísticas, contabilidade, matemática básica, ética empresarial, administração e afins.
                 </p>
 
             </article>
@@ -73,9 +80,9 @@
     </main>
 
     <footer class="footer">
-        <span class="footer__texto">
+        <span class="footer__text">
             Feito com
-            <img class="icon icon--texto" src="assets/icons/iconmonstr-coracao.svg" alt="amor"> por Dayana Souza
+            <img class="icon icon--text" src="assets/icons/iconmonstr-coracao.svg" alt="amor"> por Dayana Souza
         </span>
     </footer>
 </body>
